@@ -1,3 +1,7 @@
+2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b41
+
+	* Change: Unglobalize login.php
+
 2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b40
 
 	* Change: Since we no longer do shutterfly donations, 
